Fix elements not resizing correctly on mobile, causing whitespace on the right

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -42,3 +42,8 @@
   top: 50%;
 }
 
+@media screen and (max-width: 1024px) {
+  .contact-divider {
+    width: 100%;
+  }
+}
