--- a/src/app/works/works.component.scss
+++ b/src/app/works/works.component.scss
@@ -127,4 +127,12 @@
     flex-flow: row;
     flex-wrap: wrap;
   }
+
+  .app-description-two {
+    margin: 1rem -1rem 0 0;
+  }
+
+  .app-description {
+    margin: 1rem 0 0 -1rem;
+  }
 }
